# agentic-dev-pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROMPT-TEMPLATE.md  README.md  SKILL.md  agentic-dev-pipeline.sh  detect-project.sh  pyproject.toml  triangular-verify.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  onboarding-guide.md
examples/: PROMPT-example.md  requirements-example.md
examples/node-project/: .agentic-dev-pipeline.toml  README.md  package.json
examples/python-project/: README.md  pyproject.toml  run_pipeline.py
src/agentic_dev_pipeline/: __init__.py  __main__.py  api.py  cli.py  config.py  detect.py  domain.py  init_cmd.py  log.py  pipeline.py  runner.py  verify.py
tests/: conftest.py
tests/integration/: test_pipeline_flow.py
tests/unit/: test_api.py  test_cli.py  test_config.py  test_detect_instruction_files.py  test_detect_lint_cmd.py  test_detect_project_type.py  test_detect_security_cmd.py  test_detect_src_dirs.py  test_detect_test_cmd.py  test_domain.py  test_init_cmd.py  test_log.py  test_pipeline.py  test_resolve_cmd.py  test_runner.py
