[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-dev-pipeline"
dynamic = ["version"]
description = "Agentic dev pipeline: code → quality gates → triangular verification → self-correction loop"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ella-yschoi" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[project.scripts]
agentic-dev-pipeline = "agentic_dev_pipeline.cli:main"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_dev_pipeline"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "docs/", ".github/", ".idea/", "Dockerfile", "Makefile"]

[project.urls]
Homepage = "https://github.com/ella-yschoi/agentic-dev-pipeline"
Repository = "https://github.com/ella-yschoi/agentic-dev-pipeline"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
