[project]
name = "my-python-app"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "agentic-dev-pipeline",
    "pytest>=8.0",
    "ruff>=0.9",
]

# ── agentic-dev-pipeline config ──────────────────────────
[tool.agentic-dev-pipeline]
prompt-file = "PROMPT.md"
requirements-file = "requirements.md"
max-iterations = 3
# timeout = 300
# base-branch = "main"
